--- a/AMAZON/index.html
+++ b/AMAZON/index.html
@@ -13,10 +13,24 @@
 
 <body>
     <header>
+
+
+<!-- Navigation Bar -->
+
+
         <div class="navbar">
+
+
+<!-- Box 1 -->
+
+
             <div class="nav-logo border">
                 <div class="logo"></div>
             </div>
+
+<!-- Box 2 -->
+
+
             <div class="nav-address border">
                 <p class="add-first">Delivery to</p>
                 <div class="add-icon">
@@ -24,8 +38,93 @@
                     <p class="add-sec">Pakistan</p>
                 </div>
             </div>
+
+
+<!-- Box 3 -->
+
+
+            <div class="nav-search">
+                <select class="search-select">
+                    <option>
+                        All
+                    </option>
+                    <input type="Search" class="search-input" placeholder="Search Amazon">
+                    <div class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                </select>
+            </div>
+
+
+<!-- Box 4 -->
+
+
+            <div class="nav-signin border">
+                <p><span>Hello, sign in</span></p>
+                <p class="nav-sec">Account & Lists</p>
+            </div>
+
+
+<!-- Box 5 -->
+
+
+            <div class="nav-return border">
+                <p><span>Returns</span></p>
+                <p class="nav-sec">& Orders</p>
+            </div>
+
+
+<!-- Box 6 -->
+
+
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Cart
+            </div>
+        </div>
+
+
+<!-- Panel -->
+
+
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="panel-opt">
+                <p>Today's Deals</p>
+                <p>Customer Service</p>
+                <p>Registery</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+            <div class="panel-deals">
+                Shop deals in Electronics
+            </div>
         </div>
     </header>
+
+
+<!-- Hero Section -->
+
+
+    <div class="hero-section">
+        <div class="hero-msg">
+            <p>
+               you are on amazon. here you can find various shining products at reasonable prices
+            </p>
+        </div>
+    </div>
+
+
+<!-- Shop Section -->
+
+
+    <div class="shop-section">
+        <div class="box1 box">Box1</div>
+        <div class="box2 box">Box2</div>
+        <div class="box3 box">Box3</div>
+        <div class="box4 box">Box4</div>
+    </div>
 </body>
 
 </html>
