just created the assignments requirement for AMAZON RESUME

--- a/AMAZON/index.html
+++ b/AMAZON/index.html
@@ -21,17 +21,18 @@
         <div class="navbar">
 
 
-<!-- Box 1 -->
+<!-- Navigation Bar Box 1 -->
 
 
-            <div class="nav-logo border">
+            <div class="nav-logo border cursor">
                 <div class="logo"></div>
             </div>
 
-<!-- Box 2 -->
+
+<!-- Navigation Bar Box 2 -->
 
 
-            <div class="nav-address border">
+            <div class="nav-address border cursor">
                 <p class="add-first">Delivery to</p>
                 <div class="add-icon">
                     <i class="fa-solid fa-location-dot"></i>
@@ -40,42 +41,42 @@
             </div>
 
 
-<!-- Box 3 -->
+<!-- Navigation Bar Box 3 -->
 
 
             <div class="nav-search">
-                <select class="search-select">
+                <select class="search-select cursor">
                     <option>
                         All
                     </option>
                     <input type="Search" class="search-input" placeholder="Search Amazon">
-                    <div class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    <div class="search-icon cursor"><i class="fa-solid fa-magnifying-glass"></i></div>
                 </select>
             </div>
 
 
-<!-- Box 4 -->
+<!-- Navigation Bar Box 4 -->
 
 
-            <div class="nav-signin border">
+            <div class="nav-signin border cursor">
                 <p><span>Hello, sign in</span></p>
                 <p class="nav-sec">Account & Lists</p>
             </div>
 
 
-<!-- Box 5 -->
+<!-- Navigation Bar Box 5 -->
 
 
-            <div class="nav-return border">
+            <div class="nav-return border cursor">
                 <p><span>Returns</span></p>
                 <p class="nav-sec">& Orders</p>
             </div>
 
 
-<!-- Box 6 -->
+<!-- Navigation Bar Box 6 -->
 
 
-            <div class="nav-cart border">
+            <div class="nav-cart border cursor">
                 <i class="fa-solid fa-cart-shopping"></i>
                 Cart
             </div>
@@ -86,18 +87,18 @@
 
 
         <div class="panel">
-            <div class="panel-all">
+            <div class="panel-all cursor">
                 <i class="fa-solid fa-bars"></i>
                 All
             </div>
             <div class="panel-opt">
-                <p>Today's Deals</p>
-                <p>Customer Service</p>
-                <p>Registery</p>
-                <p>Gift Cards</p>
-                <p>Sell</p>
+                <p class="border cursor">Today's Deals</p>
+                <p class="border cursor">Customer Service</p>
+                <p class="border cursor">Registery</p>
+                <p class="border cursor">Gift Cards</p>
+                <p class="border cursor">Sell</p>
             </div>
-            <div class="panel-deals">
+            <div class="panel-deals border cursor">
                 Shop deals in Electronics
             </div>
         </div>
@@ -120,11 +121,148 @@
 
 
     <div class="shop-section">
-        <div class="box1 box">Box1</div>
-        <div class="box2 box">Box2</div>
-        <div class="box3 box">Box3</div>
-        <div class="box4 box">Box4</div>
+
+
+<!-- Shop Section Box 1 -->
+        <div class="box cursor">
+            <div class="box-content">
+                <h2>Home & Appliances</h2>
+                <div class="box-img" style="background-image: url('Images/box1_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+
+
+<!-- Shop Section Box 2 -->
+        <div class="box">
+            <div class="box-content cursor">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image: url('Images/box2_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+
+
+<!-- Shop Section Box 3 -->
+        <div class="box">
+            <div class="box-content cursor">
+                <h2>Furniture & Home Decor</h2>
+                <div class="box-img" style="background-image: url('Images/box3_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+
+
+<!-- Shop Section Box 4 -->
+        <div class="box">
+            <div class="box-content cursor">
+                <h2>Electronic Devices</h2>
+                <div class="box-img" style="background-image: url('Images/box4_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+
+
+<!-- Shop Section Box 5 -->
+        <div class="box">
+            <div class="box-content cursor">
+                <h2>Beauty Picks</h2>
+                <div class="box-img" style="background-image: url('Images/box5_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+
+
+<!-- Shop Section Box 6 -->
+        <div class="box">
+            <div class="box-content cursor">
+                <h2>Pet Supplies</h2>
+                <div class="box-img" style="background-image: url('Images/box6_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+
+
+<!-- Shop Section Box 7 -->
+        <div class="box">
+            <div class="box-content cursor">
+                <h2>Toys - New Arrival!</h2>
+                <div class="box-img" style="background-image: url('Images/box7_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+
+
+<!-- Shop Section Box 8 -->
+        <div class="box">
+            <div class="box-content cursor">
+                <h2>Discover Fashion Trends</h2>
+                <div class="box-img" style="background-image: url('Images/box8_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
     </div>
+
+
+<!-- Footer -->
+
+
+    <footer>
+        <div class="foot-panel1 cursor">
+            Back to Top
+        </div>
+        <div class="foot-panel2">
+            <ul>
+                <p>Get To Know Us</p>
+                <a class="cursor">Careers</a>
+                <a class="cursor">Blogs</a>
+                <a class="cursor">About Amazon</a>
+                <a class="cursor">Investor Relations</a>
+                <a class="cursor">Amazon Devices</a>
+                <a class="cursor">Amazon Science</a>
+            </ul>
+            <ul>
+                <p>Make Money with Us</p>
+                <a class="cursor">Sell products on Amazon</a>
+                <a class="cursor">Sell on Amazon Business</a>
+                <a class="cursor">Sell apps on Amazon</a>
+                <a class="cursor">Become an Affiliate</a>
+                <a class="cursor">Advertise Your Products</a>
+                <a class="cursor">Self-Publish with Us</a>
+                <a class="cursor">Host an Amazon Hub</a>
+            </ul>
+            <ul>
+                <p>Amazon Payment Products</p>
+                <a class="cursor">Amazon Business Card</a>
+                <a class="cursor">Shop with Points</a>
+                <a class="cursor">Reload Your Balance</a>
+                <a class="cursor">Amazon Currency Converter</a>
+            </ul>
+            <ul>
+                <p>Let Us Help You</p>
+                <a class="cursor">Your Account</a>
+                <a class="cursor">Your Orders</a>
+                <a class="cursor">Shipping Rates & Policies</a>
+                <a class="cursor">Returns & Replacements</a>
+                <a class="cursor">Manage Your Content and Devices</a>
+                <a class="cursor">Amazon Assistant</a>
+                <a class="cursor">Help</a>
+            </ul>
+        </div>
+        <div class="foot-panel3">
+            <div class="logo cursor"></div>
+        </div>
+        <div class="foot-panel4">
+            <div class="pages cursor">
+                <a>Condition of Use</a>
+                <a>Privacy Notice</a>
+                <a>Your Ads Privacy Choice</a>
+            </div>
+            <div class="copyright cursor">
+                © 1996-2025, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
